# dinfo

./: .gitignore  Cargo.toml  README.md  design.kra  design.kra-autosave.kra
src/: main.rs  style.css  ui_elements.rs  units.rs  weather.rs
src/clock/: imp.rs  mod.rs
src/global_state/: imp.rs  mod.rs
src/upower/: helpers.rs  mod.rs
src/upower/gobject/: imp.rs  mod.rs
src/weather_state/: imp.rs  mod.rs
