[package]
name = "dinfo"
version = "0.0.1"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
chrono = "0.4.42"
futures = "0.3.31"
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_20"] }
gtk-ls = { version = "0.7.1", package = "gtk4-layer-shell" }
open-meteo-rs = "0.0.5"
public-ip-address = "0.4.0"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
upower_dbus = "0.3.2"
zbus = "=3.15.2"
